Добавляет стили к секции Наша програма

--- a/src/partials/our-program.html
+++ b/src/partials/our-program.html
@@ -1,120 +1,120 @@
 <section class="our-program">
     <div class="container">
-        <h2 class="our-program-title">Наша программа</h2>
-        <ul class="our-program-list list">
-            <li class="our-program-item">
-                1 семестр
-                <ul class="our-program-semester-list list">
-                    <li class="our-program-semester-item">
-                        Grammar
-                        <ul class="our-program-topic-list list">
-                            <li class="our-program-topic-item">Nouns & Articles</li>
-                            <li class="our-program-topic-item">Adjectives & Adverb</li>
-                        </ul>
-                    </li>
-                    <li class="our-program-semester-item vocabulary">
-                        Vocabulary
-                        <ul class="our-program-topic-list list">
-                            <li class="our-program-topic-item">Family & Relations</li>
-                            <li class="our-program-topic-item">People & Society</li>
-                        </ul>
-                    </li>
-                </ul>
-            </li>
-            <li class="our-program-item">
-                2 семестр
-                <ul class="our-program-semester-list list">
-                    <li class="our-program-semester-item  grammar">
-                        Grammar
-                        <ul class="our-program-topic-list list">
-                            <li class="our-program-topic-item">Pronouns</li>
-                            <li class="our-program-topic-item">Active Voice</li>
-                            <li class="our-program-topic-item">Passive Voice </li>
-                        </ul>
-                    </li>
-                    <li class="our-program-semester-item vocabulary">
-                        Vocabulary
-                        <ul class="our-program-topic-list list">
-                            <li class="our-program-topic-item">Home</li>
-                            <li class="our-program-topic-item">School</li>
-                            <li class="our-program-topic-item">Work</li>
-                        </ul>
-                    </li>
-                </ul>
-            </li>     
-            <li class="our-program-item">
-                3 семестр
-                <ul class="our-program-semester-list list">
-                    <li class="our-program-semester-item grammar">
-                        Grammar
-                        <ul class="our-program-topic-list list">
-                            <li class="our-program-topic-item">Modal verbs</li>
-                            <li class="our-program-topic-item">Infinitive</li>
-                            <li class="our-program-topic-item">Gerund</li>
-                            <li class="our-program-topic-item">Participle: 1, 2</li>
-                        </ul>
-                    </li>
-                    <li class="our-program-semester-item vocabulary">
-                        Vocabulary
-                        <ul class="our-program-topic-list list">
-                            <li class="our-program-topic-item">Travel & Tourism</li>
-                            <li class="our-program-topic-item">Culture & Free Time</li>
-                            <li class="our-program-topic-item">Sport</li>
-                        </ul>
-                    </li>
-                    <li class="our-program-semester-item writing">
-                        Writing
-                        <ul class="our-program-topic-list list">
-                            <li class="our-program-topic-item">Informal Letter </li>
-                        </ul>
-                    </li>
-                </ul>
-            </li>
-            <li class="our-program-item">
-                4 семестр
-                <ul class="our-program-semester-list list">
-                    <li class="our-program-semester-item grammar">
-                        Grammar
-                        <ul class="our-program-topic-list list">
-                            <li class="our-program-topic-item">Clauses: Conditional and Wishes</li>
-                            <li class="our-program-topic-item">Direct / Reported speech</li>
-                            <li class="our-program-topic-item">Preposition</li>
-                            <li class="our-program-topic-item">Conjunction</li>
-                            <li class="our-program-topic-item">Numeral</li>
-                        </ul>
-                    </li>
-                    <li class="our-program-semester-item vocabulary">
-                        Vocabulary
-                        <ul class="our-program-topic-list list">
-                            <li class="our-program-topic-item">Healthy Living</li>
-                            <li class="our-program-topic-item">Nature & Environment</li>
-                            <li class="our-program-topic-item">Money</li>
-                        </ul>
-                    </li>
-                    <li class="our-program-semester-item writing">
-                        Writing
-                        <ul class="our-program-topic-list list">
-                            <li class="our-program-topic-item">Formal Letter</li>
-                        </ul>
-                    </li>
-                </ul>
-            </li>
-            <li class="our-program-item">
-                    5 семестр
+        <div class="our-program-wrapper">
+            <h2 class="our-program-title">Наша программа</h2>
+            <ul class="our-program-list list">
+                <li class="our-program-item">
+                    1 семестр
                     <ul class="our-program-semester-list list">
                         <li class="our-program-semester-item grammar">
+                            <span class="our-program-semester-text">Grammar</span>
                             <ul class="our-program-topic-list list">
-                                <li class="our-program-topic-item">Revision</li>
-                                <li class="our-program-topic-item">Tests</li>
+                                <li class="our-program-topic-item">Nouns & Articles</li>
+                                <li class="our-program-topic-item">Adjectives & Adverb</li>
                             </ul>
                         </li>
-                    </ul>       
-            </li>
-        </ul>
+                        <li class="our-program-semester-item vocabulary">
+                            <span class="our-program-semester-text">Vocabulary</span>
+                            <ul class="our-program-topic-list list">
+                                <li class="our-program-topic-item">Family & Relations</li>
+                                <li class="our-program-topic-item">People & Society</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li class="our-program-item">
+                    2 семестр
+                    <ul class="our-program-semester-list list">
+                        <li class="our-program-semester-item  grammar">
+                            <span class="our-program-semester-text">Grammar</span>
+                            <ul class="our-program-topic-list list">
+                                <li class="our-program-topic-item">Pronouns</li>
+                                <li class="our-program-topic-item">Active Voice</li>
+                                <li class="our-program-topic-item">Passive Voice </li>
+                            </ul>
+                        </li>
+                        <li class="our-program-semester-item vocabulary">
+                            <span class="our-program-semester-text">Vocabulary</span>
+                            <ul class="our-program-topic-list list">
+                                <li class="our-program-topic-item">Home</li>
+                                <li class="our-program-topic-item">School</li>
+                                <li class="our-program-topic-item">Work</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>     
+                <li class="our-program-item">
+                    3 семестр
+                    <ul class="our-program-semester-list list">
+                        <li class="our-program-semester-item grammar">
+                            <span class="our-program-semester-text">Grammar</span>
+                            <ul class="our-program-topic-list list">
+                                <li class="our-program-topic-item">Modal verbs</li>
+                                <li class="our-program-topic-item">Infinitive</li>
+                                <li class="our-program-topic-item">Gerund</li>
+                                <li class="our-program-topic-item">Participle: 1, 2</li>
+                            </ul>
+                        </li>
+                        <li class="our-program-semester-item vocabulary">
+                            <span class="our-program-semester-text">Vocabulary</span>
+                            <ul class="our-program-topic-list list">
+                                <li class="our-program-topic-item">Travel & Tourism</li>
+                                <li class="our-program-topic-item">Culture & Free Time</li>
+                                <li class="our-program-topic-item">Sport</li>
+                            </ul>
+                        </li>
+                        <li class="our-program-semester-item writing">
+                            <span class="our-program-semester-text">Writing</span>
+                            <ul class="our-program-topic-list list">
+                                <li class="our-program-topic-item">Informal Letter </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li class="our-program-item">
+                    4 семестр
+                    <ul class="our-program-semester-list list">
+                        <li class="our-program-semester-item grammar">
+                            <span class="our-program-semester-text">Grammar</span>
+                            <ul class="our-program-topic-list list">
+                                <li class="our-program-topic-item">Clauses: Conditional and Wishes</li>
+                                <li class="our-program-topic-item">Direct / Reported speech</li>
+                                <li class="our-program-topic-item">Preposition</li>
+                                <li class="our-program-topic-item">Conjunction</li>
+                                <li class="our-program-topic-item">Numeral</li>
+                            </ul>
+                        </li>
+                        <li class="our-program-semester-item vocabulary">
+                            <span class="our-program-semester-text">Vocabulary</span>
+                            <ul class="our-program-topic-list list">
+                                <li class="our-program-topic-item">Healthy Living</li>
+                                <li class="our-program-topic-item">Nature & Environment</li>
+                                <li class="our-program-topic-item">Money</li>
+                            </ul>
+                        </li>
+                        <li class="our-program-semester-item writing">
+                            <span class="our-program-semester-text">Writing</span>
+                            <ul class="our-program-topic-list list">
+                                <li class="our-program-topic-item">Formal Letter</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li class="our-program-item">
+                        5 семестр
+                        <div class="our-program-semester-empty"> </div>
+                                <ul class="our-program-topic-list list">
+                                    <li class="our-program-topic-item">Revision</li>
+                                    <li class="our-program-topic-item">Tests</li>
+                                </ul>    
+                </li>
+            </ul>
+        </div>
 
 
-        <h2  class="why-we-choose-title">Почему нас выбирают</h2>
+
         <div class="why-we-choose-description">
+            <h2  class="why-we-choose-title">Почему нас выбирают</h2>
             <ul class="why-we-choose-set">
                 <li class="why-we-choose-set-item odd">
                     <ul class="why-we-choose-set-item-list">
