--- a/src/sass/layout/_our-program.scss
+++ b/src/sass/layout/_our-program.scss
@@ -1,12 +1,17 @@
 .our-program{
-    position: relative;
     padding-top: 50px;
-    padding-bottom: 537px;
+    padding-bottom: 390px;
     background-color: var(--main-color);
-}
+  }
 
 .our-program .container{
     position: relative;
+}
+
+.our-program-wrapper{
+  background-image: url('../images/our-program/bg-our-program-mobile.png');
+  background-repeat: no-repeat;
+  background-position: 1473px 200px;
 }
 
 .our-program-title{
@@ -83,23 +88,42 @@
         margin-bottom: 11px;
     }
 
-    &::before{
-        position: absolute;
-        content: "";
-        width: 13px;
-        height: 1px;
-        top: 9px;
-        left: 0;
-        background-color: var(--orange-color);
-    }
+}
+
+.our-program-semester-text{
+  margin-left: 20px;
+
+  &::before{
+    position: absolute;
+    content: "";
+    width: 13px;
+    height: 1px;
+    top: 9px;
+    left: 0;
+    background-color: var(--orange-color);
+  }
+}
+
+.our-program-semester-empty{
+  content: '';
+  height: 20px;
+  width: 1px;
+
+  &::before{
+    position: absolute;
+    content: "";
+    width: 13px;
+    height: 1px;
+    top: 40px;
+    left: 0;
+    background-color: var(--orange-color);
+  }
 
 }
 
 .our-program-topic-list{
     margin-top: 11px;
 }
-
-.our-program-topic-list
 
 .our-program-topic-item{
     font-weight: 500;
@@ -116,7 +140,7 @@
 @media screen and (min-width: 768px){
     .our-program{
         padding-top: 60px;
-        padding-bottom: 392px;
+        padding-bottom: 160px;
     }
 
     .our-program-title{
@@ -129,6 +153,7 @@
 
     .our-program-list{
         margin-left: 144px;
+        margin-bottom: 189px;
     
         &::before{
             left: 88px;
@@ -136,6 +161,7 @@
             width: 1px;
             height: 705px;
         }
+    }
 
         .our-program-item{
             &:not(:last-child){
@@ -147,7 +173,6 @@
                 top: 6px;
             }
         }
-    }
 
     .our-program-semester-list{
         display: flex;
@@ -156,28 +181,46 @@
 
     .our-program-semester-item{
 
-        & .grammar{
-            min-width: 176px;
+        &.grammar{
+            width: 176px;
         }
 
-        & .vocabulary{
-            min-width: 155px;
+        &.vocabulary{
+            width: 155px;
         }
 
-        & .writing{
-            min-width: 110px;
+        &.writing{
+            width: 110px;
         }
 
         &:not(:last-child){
             margin-bottom: 0;
+            margin-right: 50px;
         }
     
     }
 }
 
 @media screen and (min-width: 1344px){
+  .our-program{
+    padding-top: 120px;
+    padding-bottom: 270px;
+}
+
+  .our-program-title{
+    margin-bottom: 160px;
+}
+
     .our-program-list{
         display: flex;
+        margin-left: 0;
+
+        &::before{
+          left: -15px;
+          top: 140px;
+          width: 1684px;
+          height: 1px;
+      }
     }
 
     .our-program-item{
@@ -185,8 +228,33 @@
 
         &:not(:last-child){
             margin-right: 30px;
+            margin-bottom: 0;
         }
+
+        &::before{
+          left: 0;
+          top: -60px;
+      }
+
     }
+
+    .our-program-semester-list{
+      display: flex;
+      flex-direction: column;
+    }
+
+    .our-program-semester-item{
+      display: flex;
+      flex-direction: column;
+
+      &:not(:first-child){
+        margin-top: 25px;
+      }
+    }
+
+    .our-program-topic-list{
+      margin-top: 10px;
+  }
 }
 
 
@@ -256,10 +324,13 @@ li {
   
   @media screen and (min-width: 768px) {
     .why-we-choose-title{
+        min-width: 370px;
         font-size: 26px;
         line-height: 1.308;
 
-        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 30px;
     }
 
     .why-we-choose-description {
