--- a/src/sass/layout/_garant.scss
+++ b/src/sass/layout/_garant.scss
@@ -17,17 +17,31 @@
   .feature-list__item:not(:last-child) {
     margin-bottom: 23px;
   }
-  .feature-list__item::before {
-    outline: 1px solid rgb(58, 128, 0);
-    position: absolute;
-    display: flex;
+  .feature-list__item {
+    display: block;
+    padding-left: 10px;
+    // text-align: right;
+    position: relative;
     font-style: normal;
     font-weight: 500;
     font-size: 12px;
     line-height: 1.666;
-    margin-left: 20px;
-    background-repeat: no-repeat;
+    // padding-right: 50px;
+    // padding-left: 79px;
+    outline: 1px solid red;
+  }
+  .feature-list__item::before {
+    position: absolute;
+    content: '';
+    left: 0;
+    top: 0;
+    width: 15px;
+    height: 20px;
+
     background-image: url('../images/campfire.svg');
+    background-repeat: no-repeat;
+    outline: 1px solid green;
+    background-size: contain;
   }
 
   .feature-list__description span {
@@ -37,21 +51,7 @@
     display: inline-block;
     margin-left: 20px;
   }
-  // .vertical_dotted_line {
-  //   // outline: 1px solid red;
-  //   border-left: 2px dashed rgb(0, 0, 0);
-  //   position: absolute;
-  //   height: 300px;
-  //   // margin-top: 60px;
-  //   margin-left: 27px;
-  // }
-  //   .feature-list__item::before {
-  //   contain: '';
-  //   left: 0;
-  //   top: 0;
-  //   border-left: 4px dotted black;
-  //   height: 100px;
-  // }
+
   // =========2 секция
   .comments__title {
     font-style: normal;
@@ -169,17 +169,24 @@
     margin-bottom: 23px;
   }
   .feature-list__item {
-    text-align: justify;
+    position: relative;
     font-style: normal;
     font-weight: 500;
     font-size: 12px;
     line-height: 20px;
     padding-right: 50px;
     padding-left: 79px;
-    background-repeat: no-repeat;
-    background-image: url('../images/campfire.svg');
   }
-
+  .feature-list__item::before {
+    position: absolute;
+    content: '';
+    left: 0;
+    top: 0;
+    width: 15px;
+    height: 15px;
+    background-image: url('../images/campfire.svg');
+    background-repeat: no-repeat;
+  }
   .feature-list__description span {
     color: var(--orange-color);
   }
@@ -188,7 +195,7 @@
     // margin-left: 20px;
   }
 
-  // =========2 секция
+  // =====================================================================2 секция
   .container_main_comment {
     padding-left: 40px;
     padding-right: 46px;
