Добавляет оформление секций feature и our-gurantees для десктопа и таблетки, корректирует мобилку

--- a/src/partials/feature.html
+++ b/src/partials/feature.html
@@ -1,8 +1,9 @@
 <section class="feature">
-    <div class="container">
+    <!-- <div class="container"> -->
         <h1 class="visually-hidden">Особенности</h1>
-        <div class="features__wrapper">
+        
             <ul class=”features__list”>
+                <div class="features__wrapper">
                 <li>
                     <div class="features__item">
                         <svg class="features__svg">
@@ -27,8 +28,7 @@
                         <p class="features__item_text">Финансовая гарантия результата</p>
                     </div>
                 </li>
+                </div>
             </ul>
-        </div>
-            
     </div>
 </section>
