--- a/src/sass/layout/_our-guarantees.scss
+++ b/src/sass/layout/_our-guarantees.scss
@@ -1,14 +1,9 @@
-// .our-guarantees {
-//   background-color: #f1f1f1;
-// }
-
 .our-guarantees__title {
   font-weight: 800;
   font-size: 26px;
   line-height: 1.3;
   letter-spacing: 0.03em;
   color: #111518;
-  // background-color: #ffffff;
   text-align: center;
   padding-bottom: 30px;
 }
@@ -25,48 +20,73 @@
   font-size: 12px;
   line-height: 1.666;
   color: #3d3d3d;
-  padding-bottom: 23px;
+
+  &:not(:last-child) {
+    padding-bottom: 23px;
+  }
 
   &:not(:last-child)::before {
     position: absolute;
     content: '';
-    // border-left: 1px dashed #b9b9b9;
     outline: #b9b9b9 dashed 1px;
-    top: 0;
+    top: 10px;
     left: 6px;
-    // width: 1px;
     height: 100%;
-    // margin-top: 20px;
   }
 }
 
-// .our-guarantees__text {
-//   &::before {
-//     content: '';
-//     border: 1px dashed #b9b9b9;
-//     margin-right: 20px;
-//   }
-// }
 .our-guarantees__item-accent {
   color: #ff6b09;
 }
 
 .our-guarantees__icon_fire {
-  // position: relative;
   max-width: 14px;
   height: 20px;
   fill: #ff6b09;
   margin-right: 20px;
   z-index: 1;
-  // margin-left: 20px;
+}
 
-  // &::after {
-  //   // position: absolute;
-  //   content: '';
-  //   border-left: 1px dashed #b9b9b9;
-  //   // top: 14px;
-  //   // left: -28px;
-  //   // width: 1px;
-  //   // height: 100%;
-  // }
+@media screen and (min-width: 768px) {
+  .our-guarantees__bcg {
+    width: 688px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    padding-left: 79px;
+    padding-right: 50px;
+    margin: 0 auto;
+  }
+
+  .our-guarantees__item:not(:last-child) {
+    padding-bottom: 20px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .our-guarantees__title {
+    font-size: 46px;
+    padding-bottom: 50px;
+  }
+
+  .our-guarantees__bcg {
+    width: 1314px;
+    padding-top: 50px;
+    padding-bottom: 45px;
+    padding-left: 112px;
+    padding-right: 112px;
+  }
+
+  .our-guarantees__item {
+    font-size: 20px;
+    line-height: 1.4;
+
+    &:not(:last-child)::before {
+      left: 12px;
+    }
+  }
+
+  .our-guarantees__icon_fire {
+    max-width: 22px;
+    height: 30px;
+  }
 }
