Добавила стили к заголовкам h2  и h4 и к списку социальных сетей footer-social-item

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -19,27 +19,27 @@
             </li>
         </ul>
        
-            <h4>HOMEMADE ICE CREAM MADE</h4>
-            <h2>WITH PASSION</h2>
+            <h4 class="footer-title">HOMEMADE ICE CREAM <br> MADE</h4>
+            <h2 class="footer-main-title">WITH <br> PASSION</h2>
        
-        <ul class="footere-social-list">
-            <li class="social-item">
-                <a class="social-link transition" href="">
-                    <svg class="social-icon">
+        <ul class="footer-social-list transition">
+            <li class="footer-social-item">
+                <a class="footer-social-link" href="">
+                    <svg class="footer-social-icon">
                         <use href="./images/symbol-defs.svg#icon-cat"></use>
                     </svg>
                 </a>
             </li>
-            <li class="social-item">
-                <a class="social-link transition" href="">
-                    <svg class="social-icon">
+            <li class="footer-social-item">
+                <a class="footer-social-link transition" href="">
+                    <svg class="footer-social-icon">
                         <use href="./images/symbol-defs.svg#icon-telegram"></use>
                     </svg>
                 </a>
             </li>
-            <li class="social-item">
-                <a class="social-link transition" href="">
-                    <svg class="social-icon">
+            <li class="footer-social-item">
+                <a class="footer-social-link transition" href="">
+                    <svg class="footer-social-icon">
                         <use href="./images/symbol-defs.svg#icon-fb"></use>
                     </svg>
                 </a>
