--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -41,14 +41,64 @@
   margin-left: 8px;
 }
 
-.social-item {
-  width: 32px;
-  height: 32px;
+.footer-title {
+  font-family: Titan One;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.17;
+  text-transform: uppercase;
+  color: $color-ellipse;
+
+  margin-bottom: 17px;
 }
 
-.social-icon {
+.footer-main-title {
+  font-family: Titan One;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 34px;
+  line-height: 1.15;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: $color-accent;
+
+  margin-bottom: 43px;
+}
+
+.footer-social-list {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 46px;
+}
+
+.footer-social-item {
+  width: 32px;
+  height: 32px;
+
+  &:not(:last-child) {
+    margin-right: 28px;
+  }
+}
+
+.footer-social-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  background-color: $color-ss-footer;
+
+  &:hover,
+  &:focus {
+    background-color: $color-accent;
+  }
+}
+
+.footer-social-icon {
   width: 20px;
   height: 20px;
+  fill: $color-text-white;
 }
 
 .footer-contact {
