--- a/src/sass/layout/_garant.scss
+++ b/src/sass/layout/_garant.scss
@@ -1,4 +1,7 @@
 @media screen and (max-width: 767px) {
+  .garants__container {
+    background-color: var(--grey-bcg-color);
+  }
   .garant__title {
     font-style: normal;
     font-weight: 800;
@@ -11,7 +14,6 @@
   .garants .feature-list__container {
     padding-top: 20px;
     padding-bottom: 20px;
-    background-color: var(--grey-bcg-color);
   }
 
   .feature-list__item:not(:last-child) {
@@ -19,8 +21,6 @@
   }
   .feature-list__item {
     display: block;
-    padding-left: 10px;
-    // text-align: right;
     position: relative;
     font-style: normal;
     font-weight: 500;
@@ -37,7 +37,6 @@
     top: 0;
     width: 15px;
     height: 20px;
-
     background-image: url('../images/campfire.svg');
     background-repeat: no-repeat;
     outline: 1px solid green;
@@ -49,7 +48,7 @@
   }
   .feature-list__description {
     display: inline-block;
-    margin-left: 20px;
+    margin-left: 35px;
   }
 
   // =========2 секция
