--- a/src/partials/testimonials.html
+++ b/src/partials/testimonials.html
@@ -6,36 +6,69 @@
                     alt="photo gallery of our products">
             </picture>
         </div>
-    <div class="container">
-        <picture class="testimonials-photo">
-            <source srcset="./images/testimonials_1.webp 1x, ./images/testimonials_1@2x.webp 2x" type="image/webp">
-            <img srcset="./images/testimonials_1.jpg 1x, ./images/testimonials_1@2x.jpg 2x"
-                src="./images/testimonials_1.jpg" alt="photo" width="85px">
-        </picture>
-        <p class="testimonials-wrapper-text">
-            <span class="testimonials-text">
-                Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc,
-                accumsan
-                congue. Lorem ipsum primis in nibh vel risus.
-            </span>
-        </p>
-        <svg class="testimonials-icon" width="32px" height="4px">
-            <use href="./images/icons/IceCreamIcons.svg#icon-circleRed"></use>
-        </svg>
-        <p class="testimonials-name">Emily, Los Angeles</p>
-        <div class="testimonials-wrapper-svg">
-            <svg class="testimonials-home-active"  width="12px" height="12px">
-                <use class="testimonials-circle" href="./images/icons/IceCreamIcons.svg#icon-ellipse"></use>
-                <use class="testimonials-home" href="./images/icons/IceCreamIcons.svg#icon-home"></use>
+
+
+
+<div class="container ">
+         <section class="slider"> -->
+            <div>
+                <picture class="testimonials-photo">
+                    <source srcset="./images/testimonials_1.webp 1x, ./images/testimonials_1@2x.webp 2x" type="image/webp">
+                    <img srcset="./images/testimonials_1.jpg 1x, ./images/testimonials_1@2x.jpg 2x" src="./images/testimonials_1.jpg"
+                        alt="photo" width="85px">
+                </picture>
+                <p class="testimonials-wrapper-text">
+                    <span class="testimonials-text">
+                        Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc,
+                        accumsan
+                        congue. Lorem ipsum primis in nibh vel risus.
+                    </span>
+                </p>
+                <svg class="testimonials-icon" width="32px" height="4px">
+                    <use href="./images/icons/IceCreamIcons.svg#icon-circleRed"></use>
+                </svg>
+                <p class="testimonials-name">Emily, Los Angeles</p>
+            </div>
+            <div>
+                <picture class="testimonials-photo">
+                    <source srcset="./images/testimonials_2.webp 1x, ./images/testimonials_2@2x.webp 2x" type="image/webp">
+                    <img srcset="./images/testimonials_2.jpg 1x, ./images/testimonials_2@2x.jpg 2x" src="./images/testimonials_2.jpg"
+                        alt="photo" width="85px">
+                </picture>
+                <p class="testimonials-wrapper-text">
+                    <span class="testimonials-text">
+                        Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc,
+                        accumsan
+                        congue. Lorem ipsum primis in nibh vel risus.
+                    </span>
+                </p>
+                <svg class="testimonials-icon" width="32px" height="4px">
+                    <use href="./images/icons/IceCreamIcons.svg#icon-circleRed"></use>
+                </svg>
+                <p class="testimonials-name">Emily, Los Angeles</p>
+            </div>
+            <div>
+            <picture class="testimonials-photo">
+                <source srcset="./images/testimonials_3.webp 1x, ./images/testimonials_3@2x.webp 2x" type="image/webp">
+                <img srcset="./images/testimonials_3.jpg 1x, ./images/testimonials_3@2x.jpg 2x" src="./images/testimonials_3.jpg"
+                    alt="photo" width="85px">
+            </picture>
+            <p class="testimonials-wrapper-text">
+                <span class="testimonials-text">
+                    Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc,
+                    accumsan
+                    congue. Lorem ipsum primis in nibh vel risus.
+                </span>
+            </p>
+            <svg class="testimonials-icon" width="32px" height="4px">
+                <use href="./images/icons/IceCreamIcons.svg#icon-circleRed"></use>
             </svg>
-            <svg  width="12px" height="12px">
-                <use class="testimonials-circle" href="./images/icons/IceCreamIcons.svg#icon-ellipse"></use>
-                <use class="testimonials-home" href="./images/icons/IceCreamIcons.svg#icon-home"></use>
-            </svg>
-            <svg  width="12px" height="12px">
-                <use class="testimonials-circle" href="./images/icons/IceCreamIcons.svg#icon-ellipse"></use>
-                <use class="testimonials-home" href="./images/icons/IceCreamIcons.svg#icon-home"></use>
-            </svg>
+            <p class="testimonials-name">Emily, Los Angeles</p>
+            </div>
+        
+        </section> 
         </div>
-    </div>
+    
 </section>
+
+ 
