Добавил оформление стилей на мобильное меню

--- a/src/partials/manufacture.html
+++ b/src/partials/manufacture.html
@@ -25,8 +25,8 @@
         "
         src="../images/manufacture/home-pic4-mobile.png"
         alt="cow and milk"
-      /> -->
-    <!-- </picture> -->
+      />
+    </picture> -->
 
     <p class="primary-text-manufacture">
       Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo
