--- a/src/sass/layouts/_manufacture.scss
+++ b/src/sass/layouts/_manufacture.scss
@@ -34,25 +34,25 @@
   padding-right: 51px;
 
   margin-bottom: 47px;
-  // @media screen and (max-width: 767px) {
-  //   background-image: url('./src/images/manufacture/sectionbg1-mobile.png');
-  //   @media screen and (min-device-pixel-ratio: 2),
-  //     screen and (min-resolution: 192dpi),
-  //     screen and (min-resolution: 2dppx) {
-  //     background-image: url('../images/manufacture/sectionbg1-mobile@2x.png');
-  //   }
-  // }
-  // @media screen and (min-width: 1200px) {
-  //   background-image: url('../images/manufacture/sectionbg1-desktop.png');
-  //   @media screen and (min-device-pixel-ratio: 2),
-  //     screen and (min-resolution: 192dpi),
-  //     screen and (min-resolution: 2dppx) {
-  //     background-image: url('../images/manufacture/sectionbg1-desktop@2x.png');
-  //   }
-  // }
-  // background-repeat: no-repeat;
-  // background-position: right 0 left 0 bottom 0;
-  // background-size: cover;
+  @media screen and (max-width: 767px) {
+    background-image: url('../images/manufacture/sectionbg1-mobile.png');
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: url('../images/manufacture/sectionbg1-mobile@2x.png');
+    }
+  }
+  @media screen and (min-width: 1200px) {
+    background-image: url('../images/manufacture/sectionbg1-desktop.png');
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: url('../images/manufacture/sectionbg1-desktop@2x.png');
+    }
+  }
+  background-repeat: no-repeat;
+  background-position: right 0 left 0 bottom 0;
+  background-size: cover;
 }
 .button-manufacture {
   margin-top: 0;
