--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -8,15 +8,15 @@
   align-items: center;
 }
 
+.logo {
+  display: inline-block;
+  padding-top: 6px;
+}
+
 .navigation-btn {
   @media screen and (max-width: 767px) {
     display: none;
   }
-}
-
-.logo {
-  display: inline-block;
-  padding-top: 6px;
 }
 
 .menu-open-btn {
@@ -26,9 +26,10 @@
 
   display: inline-block;
   padding: 0;
+  margin: 0;
   border: none;
   cursor: pointer;
-  background-color: tomato;
+  background-color: transparent;
 }
 
 .icon-burger {
@@ -36,18 +37,19 @@
 }
 
 .mobile-menu {
-  @media screen and (max-width: 1200 px) {
-    display: none;
+  @media screen and (max-width: 1200px) {
     position: fixed;
     top: 0;
     left: 0;
-    width: 250px;
+    width: 100%;
     height: 100vh;
     padding-top: 60px;
-    padding-left: 20px;
-    padding-right: 21px;
+    // padding-left: 20px;
+    // padding-right: 21px;
 
-    background-color: #e17992;
+    text-align: center;
+
+    background-color: $mobileMenuColor;
 
     opacity: 0;
     visibility: hidden;
@@ -83,7 +85,7 @@
   border: none;
   cursor: pointer;
 
-  background-color: #3edf43;
+  background-color: transparent;
 }
 
 .icon-close {
@@ -91,6 +93,7 @@
 }
 
 .mobile-btn {
+  position: relative;
   width: 209px;
   height: 44px;
   margin: 32px;
@@ -106,9 +109,16 @@
   color: $titleTextColor;
 }
 
+.mobile-btn-icon {
+  fill: $titleTextColor;
+  margin-left: 16px;
+}
+
 .mobile-item {
-  &:not(:last-child) {
-    margin-bottom: 23px;
+  border-bottom: 1px solid #e18298;
+
+  &:first-child {
+    border-top: 1px solid #e18298;
   }
 }
 
@@ -116,15 +126,18 @@
   display: block;
   padding-top: 12px;
   padding-bottom: 12px;
+  padding-left: 20px;
+  padding-right: 21px;
 
   font-family: 'DM Sans', sans-serif;
   font-size: 14px;
   font-weight: 700;
   line-height: 1.2875;
+  text-align: left;
 
   color: $primaryWhiteColor;
 
-  &.link-current {
+  &.current {
     color: $titleTextColor;
   }
 }
