--- a/src/sass/layout/_garant.scss
+++ b/src/sass/layout/_garant.scss
@@ -28,9 +28,9 @@
     line-height: 1.666;
     // padding-right: 50px;
     // padding-left: 79px;
-    outline: 1px solid red;
+    // outline: 1px solid red;
   }
-  .feature-list__item::before {
+  .feature-list__item::after {
     position: absolute;
     content: '';
     left: 0;
@@ -39,10 +39,21 @@
     height: 20px;
     background-image: url('../images/campfire.svg');
     background-repeat: no-repeat;
-    outline: 1px solid green;
+    // outline: 1px solid green;
     background-size: contain;
   }
-
+  .feature-list__item:nth-child(-n + 3):before {
+    position: absolute;
+    content: '';
+    left: 6px;
+    top: 25px;
+    width: 3px;
+    height: 68px;
+    background-image: url('../images/dash_dot.svg');
+    background-repeat: no-repeat;
+    // outline: 1px solid green;
+    background-size: contain;
+  }
   .feature-list__description span {
     color: var(--orange-color);
   }
