Оптимизирована svg для бєкграунда

--- a/src/partials/general-problem.html
+++ b/src/partials/general-problem.html
@@ -1,4 +1,4 @@
-<section class="general-problem">
+<section class="general-problem section">
   <h2>Главные проблемы учеников<br />
     на English ВНО, которые<br />
     мы <span>помогаем</span> решить
