--- a/src/sass/layout/_garant.scss
+++ b/src/sass/layout/_garant.scss
@@ -168,11 +168,10 @@
     line-height: 130%;
     text-align: center;
     letter-spacing: 0.03em;
-    // margin-bottom: 30px;
+    margin-bottom: 30px;
   }
 
-  .feature-list {
-    display: block;
+  .garants__container {
     background-color: var(--grey-bcg-color);
   }
   .feature-list__item:not(:last-child) {
@@ -187,15 +186,29 @@
     padding-right: 50px;
     padding-left: 79px;
   }
-  .feature-list__item::before {
+  .feature-list__item::after {
     position: absolute;
     content: '';
     left: 0;
     top: 0;
     width: 15px;
-    height: 15px;
+    height: 20px;
     background-image: url('../images/campfire.svg');
     background-repeat: no-repeat;
+    // outline: 1px solid green;
+    background-size: contain;
+  }
+  .feature-list__item:nth-child(-n + 3):before {
+    position: absolute;
+    content: '';
+    left: 6px;
+    top: 28px;
+    width: 3px;
+    height: 30px;
+    background-image: url('../images/dash_dot_tablet.svg');
+    background-repeat: no-repeat;
+    // outline: 1px solid green;
+    background-size: contain;
   }
   .feature-list__description span {
     color: var(--orange-color);
