--- a/src/sass/components/locations/_locations.scss
+++ b/src/sass/components/locations/_locations.scss
@@ -62,7 +62,7 @@
 
     &:hover,
     &:focus {
-      box-shadow: 0px 8px 40px $dark-pink-color;
+      box-shadow: 0px 8px 50px rgba(212, 20, 67, 0.6);
       transition: 600ms cubic-bezier(0.4, 0, 0.2, 1);
     }  
 }
@@ -75,8 +75,7 @@
     text-transform: uppercase;
 
     color: $main-white-color;
-    background-color: $pistachio-color;
-   
+    background-color: $pistachio-color;   
 
     display: inline-block;
     margin-bottom: 25px;
@@ -238,11 +237,70 @@
     }
 }
 
-.location-contacts {
+.location-list {
+    margin-bottom: 54px;
+
     @media screen and (min-width: $tablet) {
         display: flex;
         flex-wrap: wrap;    
     } 
 }
 
+.location-buttons-list {
+
+    text-align: center;
+
+    @media screen and (min-width: $tablet) {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: nowrap;
+    }
+    
+    li:first-child {
+            
+        & .location-button {
+          background-color: $main-red-color;
+          color: $main-white-color;
+          margin-bottom: 10px;
+
+          @media (min-width: 768px) {
+            margin-bottom: 0;
+            margin-right: 15px;
+          }
+        }
+    }
+}
+
+.location-button {
+    @extend %link;
+
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    
+    margin: auto;
+    min-width: 176px;
+    min-height: 44px;
+
+    font-size: 16px;
+    line-height: 1.31;
+    font-weight: 700;    
+    letter-spacing: .06em;
+
+    color: $main-red-color;
+    background-color: $main-white-color;
+    border-radius: 22px;
+    border: 0 solid transparent;
+    cursor: pointer;
+    text-transform: none;
+
+    &:hover,
+    &:focus {
+        transform: scale(1.1);
+        outline: 0;
+        background-color: #ecebeb;
+    }
+
+}
 
