--- a/src/sass/layout/_garant.scss
+++ b/src/sass/layout/_garant.scss
@@ -393,7 +393,7 @@
     // justify-content: center;
   }
   .comments__container {
-    outline: 1px solid teal;
+    // outline: 1px solid teal;
     justify-content: center;
   }
   .container_main_comment {
