--- a/src/partials/problems.html
+++ b/src/partials/problems.html
@@ -1,14 +1,12 @@
 <section class="problems">
         <div class="container">
-            <div class="problem-text-wrapper">
                 <h1 class="hidden-title">
                     problems
                 </h1>
-                <p class="problems-text">Главные проблемы<br> учеников<br>
-                    на English ВНО, <br> которые <br>
+                <p class="problems-text">Главные проблемы учеников<br>
+                    на English ВНО, которые <br>
                     мы <span class="problem-text-exception">помогаем </span>решить
                 </p>
-            </div>
            
         
             <section class="section-problems">
@@ -33,7 +31,7 @@
                         </li>
                         <li class="problem-list-item">
                             <h3 class="problems-title accent-line">
-                                Поодготовка в <br> одиночку
+                                Поодготовка в одиночку
                             </h3>
                         </li>
                         <li class="problem-list-item">
