Добавила стили к классам footer-contact и copyright и завершила мобильную версию

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -46,7 +46,7 @@
             </li>
         </ul>
         <div class="footer-contact">
-            <p><strong>Feel free to contact</strong></p>
+            <p><strong class="footer-contact-text">Feel free to contact</strong></p>
             <a href="tel:+610383766284" class="footer-contact-link transition">
                 <p class="footer-contact-name">+61 (0) 383 766 284</p>
             </a>
