--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -103,18 +103,37 @@
 
 .footer-contact {
   display: flex;
-  align-items: flex-end;
+  justify-content: flex-end;
+  margin-bottom: 43px;
+}
+
+.footer-contact-text,
+.footer-contact-name {
+  font-family: DM Sans;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 1.83;
+  letter-spacing: 0;
 }
 
 .footer-contact-name {
-  margin-left: 5px;
+  margin-left: 3px;
+  color: $color-accent;
+}
+
+.copyright {
+  padding-bottom: 25px;
+  border-top: 1px solid $color-line-galary;
 }
 
 .copyright-text {
-  text-align: center;
-
   margin: 0;
   padding-top: 22px;
-  padding-bottom: 25px;
-  border-top: $color-line-galary;
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.5;
+  text-align: center;
+  color: $color-text-grey;
 }
