--- a/src/sass/layout/_garant.scss
+++ b/src/sass/layout/_garant.scss
@@ -26,9 +26,6 @@
     font-weight: 500;
     font-size: 12px;
     line-height: 1.666;
-    // padding-right: 50px;
-    // padding-left: 79px;
-    // outline: 1px solid red;
   }
   .feature-list__item::after {
     position: absolute;
@@ -39,7 +36,6 @@
     height: 20px;
     background-image: url('../images/campfire.svg');
     background-repeat: no-repeat;
-    // outline: 1px solid green;
     background-size: contain;
   }
   .feature-list__item:nth-child(-n + 3):before {
@@ -51,7 +47,6 @@
     height: 68px;
     background-image: url('../images/dash_dot.svg');
     background-repeat: no-repeat;
-    // outline: 1px solid green;
     background-size: contain;
   }
   .feature-list__description span {
@@ -62,7 +57,7 @@
     margin-left: 35px;
   }
 
-  // =========2 секция
+  // ========================================отзывы выпускников=============================
   .comments__title {
     font-style: normal;
     font-weight: 800;
@@ -91,7 +86,6 @@
     letter-spacing: 0.08em;
     margin-bottom: 10px;
     color: var(--orange-color);
-    // outline: 1px solid green;
   }
   .comments-list .comments-list__info {
     font-style: normal;
@@ -105,7 +99,6 @@
   }
 
   .comments-list .comments-list-icon__vk {
-    // outline: 1px solid green;
     width: 30px;
     height: 30px;
     margin-top: 10px;
@@ -159,7 +152,7 @@
   }
 }
 // =============================================================================================
-// ==================================================================================================
+// =============================================================================================
 @media screen and (min-width: 768px) {
   .garant__title {
     font-style: normal;
@@ -198,7 +191,6 @@
     height: 20px;
     background-image: url('../images/campfire.svg');
     background-repeat: no-repeat;
-    // outline: 1px solid green;
     background-size: contain;
   }
   .feature-list__item:nth-child(-n + 3):before {
@@ -210,15 +202,10 @@
     height: 30px;
     background-image: url('../images/dash_dot_tablet.svg');
     background-repeat: no-repeat;
-    // outline: 1px solid green;
     background-size: contain;
   }
   .feature-list__description span {
     color: var(--orange-color);
-  }
-  .feature-list__description {
-    display: inline-block;
-    // margin-left: 20px;
   }
 
   // =====================================================================2 секция
@@ -360,7 +347,6 @@
     height: 30px;
     background-image: url('../images/campfire.svg');
     background-repeat: no-repeat;
-    // outline: 1px solid green;
     background-size: contain;
   }
   .feature-list__item:nth-child(-n + 3):before {
@@ -372,7 +358,6 @@
     height: 40px;
     background-image: url('../images/dash_dot_desk.svg');
     background-repeat: no-repeat;
-    // outline: 1px solid green;
     background-size: contain;
   }
 
@@ -390,18 +375,13 @@
   // =========2 секция
   .comments {
     display: flex;
-    // justify-content: center;
   }
-  .comments__container {
-    // outline: 1px solid teal;
-    justify-content: center;
-  }
+
   .container_main_comment {
     padding-left: 82px;
     padding-right: 40px;
   }
   .comments__title {
-    // outline: 1px solid red;
     font-style: normal;
     font-weight: 800;
     font-size: 46px;
@@ -410,7 +390,6 @@
     letter-spacing: 0.03em;
     margin-top: 50px;
     margin-bottom: 0;
-    // margin-bottom: 100px;
   }
   .comments-list {
     padding-top: 0;
@@ -419,11 +398,10 @@
     box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.1);
   }
   .comments .comments-main-foto__main-foto {
-    // outline: 1px solid green;
-
     min-width: 150px;
     min-height: 150px;
   }
+
   .comments-list__name {
     display: block;
     font-style: normal;
@@ -449,7 +427,6 @@
     width: 30px;
     height: 30px;
     margin-top: 20px;
-    // margin-bottom: 20px;
     margin-right: auto;
     margin-left: auto;
   }
@@ -473,12 +450,11 @@
     color: var(--orange-color);
     text-decoration: underline;
   }
-  // ==================================================
-  // ==============================================================
+  // ==========================================================================================
+  // ==========================================================================================
   .comments-under__list {
     margin-top: 20px;
     margin-bottom: 50px;
-    // display: flex;
     justify-content: center;
   }
   .comments-under__icon-left-arrow {
