--- a/src/partials/teacher.html
+++ b/src/partials/teacher.html
@@ -21,31 +21,20 @@
               <svg class="icon-check" width="17.08" height="14">
                 <use href="./images/sprite.svg#icon-check-mark"></use>
               </svg>
-            </li>
-
-            <li class="teacher-list-check">
-              <svg class="icon-check" width="17.08" height="14">
-                <use href="./images/sprite.svg#icon-check-mark"></use>
-              </svg>
-            </li>
-
-            <li class="teacher-list-check">
-              <svg class="icon-check" width="17.08" height="14">
-                <use href="./images/sprite.svg#icon-check-mark"></use>
-              </svg>
-            </li>
-          </ul>
-
-          <ul class="teacher-list-text">
-            <li class="teacher-list-item">
               <h3 class="teacher-subtitle">Опыт подготовки учеников к ВНО - 6 лет</h3>
             </li>
 
-            <li class="teacher-list-item">
+            <li class="teacher-list-check">
+              <svg class="icon-check" width="17.08" height="14">
+                <use href="./images/sprite.svg#icon-check-mark"></use>
+              </svg>
               <h3 class="teacher-subtitle">Собственный результат сдачи ВНО - 197 баллов 2 года подряд</h3>
             </li>
 
-            <li class="teacher-list-item">
+            <li class="teacher-list-check">
+              <svg class="icon-check" width="17.08" height="14">
+                <use href="./images/sprite.svg#icon-check-mark"></use>
+              </svg>
               <h3 class="teacher-subtitle">Сдала на отлично международный аналог ВНО -
                 Кембриджский PET (Preliminary English Test)</h3>
             </li>
@@ -53,23 +42,19 @@
         </div>
 
         <p class="teacher-undertitle"></p>
-        <p class="teacher-text">Высшее образование получила в Институте международных 
-          отношений НАУ по специальности переводчик-аналитик.
-        </p> 
-          
-        <p class="teacher-text"> В свободное время проходит курсы от лучших университетов мира по эффективному 
-          преподаванию и методикам написания сочинений.
-        </p> 
-        
-        <p class="teacher-text"> В числе пройденных:
-          English Grammar and Essay Writing (Berkeley),
-          English Grammar&Style (The University of Queesland),
-          How to Write an Essay (Berkeley),
-          Academic and Business Writing (Berkeley),
-          The Art of Teaching (GEMS education),
-          Powerful Tools for Teaching and Learning (University of Houston).
-        </p>
-
+        <ul>
+          <li class="teacher-text">Высшее образование получила в Институте международных
+            отношений НАУ по специальности переводчик-аналитик.</li> 
+          <li class="teacher-text">В свободное время проходит курсы от лучших университетов мира по эффективному 
+            преподаванию и методикам написания сочинений.</li>
+          <li class="teacher-text">В числе пройденных:
+            English Grammar and Essay Writing (Berkeley),
+            English Grammar&Style (The University of Queesland),
+            How to Write an Essay (Berkeley),
+            Academic and Business Writing (Berkeley),
+            The Art of Teaching (GEMS education),
+            Powerful Tools for Teaching and Learning (University of Houston).</li>
+        </ul>
         <a class="teacher-link" href="#" aria-label="ссылка на сайт">Cambrige English Entry Level Certificate</a>
       </div>
 
